--- a/Practical Exam/style.css
+++ b/Practical Exam/style.css
@@ -55,12 +55,12 @@
 
 .footer{
     float: left;
-    margin-top: 20px;
+    margin-top: 60px;
     color: white;
     background-color: #22232B;
     width: 100%;
+    padding-left: 150px;
 }
-
 
 
 
